--- a/blog-post-example.html
+++ b/blog-post-example.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Blog Post
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,16 +40,15 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
-            <div id = "blogSection" class = "container-fluid">       
-                <!--      
-                <img class = "blog-top-img" alt = "placeholder" src = "images/jpg/placeholder-blogpost-img.jpg" style = "max-width: 60%;">
-                -->       
+            <div id = "blogSection" class = "container-fluid">            
                 <div class = "blog-content">
                     <h2 class = "section-header" style = "text-align: left;">Example Blog Post Title Providing Detail &amp; Context For Article</h2>
                     <div class = "blog-post-details">
@@ -83,7 +85,6 @@
                     <br><br>
                     Purus in mollis nunc sed id semper risus. Viverra nibh cras pulvinar mattis. Proin sagittis nisl rhoncus mattis rhoncus urna. Id diam maecenas ultricies mi eget mauris pharetra. Aliquam vestibulum morbi blandit cursus. Id neque aliquam vestibulum morbi. Praesent elementum facilisis leo vel fringilla. Sapien nec sagittis aliquam malesuada. Vitae et leo duis ut diam quam nulla porttitor. Auctor neque vitae tempus quam pellentesque nec. Ut lectus arcu bibendum at varius vel pharetra vel. Gravida in fermentum et sollicitudin ac orci phasellus. Vulputate enim nulla aliquet porttitor lacus luctus. Massa tempor nec feugiat nisl pretium.
                 
-                
                     <div class = "final-blurb">
                         Post was originally written by Sergio Pacheco and published November, 2021
                     </div>
@@ -91,6 +92,7 @@
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
     </body>
 
