--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Blog Listings Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,9 +40,11 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container  -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
@@ -127,20 +132,11 @@
                             </a>
                         </div>
                     </div>
-
-                    <!--
-                    <div style = "text-align: center; padding: 3rem; background: rgba(0,0,0,.8); color: #fff; margin: 0 auto; margin-top: 2rem; max-width: 100%; text-transform: uppercase;">
-                        This section will include various little blog postings, which link out to the actual full blog posts.<br><br>
-                        The little sections will show the blog article title, the author's name, and the date it was written.<br><br>
-                        Clicking on the blog posting will link the user off to the actual blog page, which will have a simple layout
-                        common for blog articles. These blog articles can include whatever the blog desires, but will normally be
-                        text heavy and will have a header image.
-                    </div>
-                    -->
                 </div>
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
     </body>
 
