--- a/coral-feast.html
+++ b/coral-feast.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Coral Feast Product Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,14 +40,19 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
+
+            <!-- Overlay for Stores List Pop-Up -->
             <div id = "popupOverlay">&nbsp;</div>
 
             <div id = "productSection" class = "container-fluid">
+                <!-- Stores List Pop-Up (Shows Locations that Sell this Product) - START -->
                 <div id = "storePopup">
                     <i class = "close-popup-overlay far fa-times-circle">
                         &nbsp;
@@ -100,9 +108,12 @@
                         </a>
                     </div>
                 </div>
+                <!-- Stores List Pop-Up (Shows Locations that Sell this Product) - END -->
+
+                <!-- Product Overview - START -->
                 <div class = "row justify-content-center product-descript-container">
                     <div class = "col-md-6 coral-feast-col">
-                        <!--<img src = "../Willow's Reef Website Mockup/images/png/compressed-product-images/coral-feast-prd.png" alt = "Coral Feast">-->
+                        &nbsp;
                     </div>
                     <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">Coral Feast</h2>
@@ -118,7 +129,9 @@
                         </button>
                     </div>
                 </div>
+                <!-- Product Overview - END -->
 
+                <!-- In-depth Product Description - START -->
                 <h2 class = "section-header">Product Description</h2>
                 <div class = "full-descript">
                     CoralFeast is made with nine all-natural 100% aquatic ingredients to help promote your corals' best 
@@ -190,9 +203,11 @@
                         </li>
                     </ul>
                 </div>
+                <!-- In-depth Product Description - END -->
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
     </body>
 
