--- a/frozen-feast.html
+++ b/frozen-feast.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: FrozenFeast Product Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,6 +40,7 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
         <div id = "pageContent" class = "">
@@ -44,10 +48,10 @@
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "productSection" class = "container-fluid">
+                <!-- Product Overview - START -->
                 <div class = "row justify-content-center product-descript-container">
                     <div class = "frozen-feast-col col-md-6">
-                        <!--<img class = "frozen-feast-img" src = "../Willow's Reef Website Mockup/images/jpg/compressed-product-images/frozen-feast-prd.jpg" alt = "FrozenFeast">-->
-                        
+                        &nbsp;                        
                     </div>
                     <div class = "col-md-6 item-descript">
                         <h2 class = "section-header">FrozenFeast</h2>
@@ -67,7 +71,9 @@
                         </a>
                     </div>
                 </div>
+                <!-- Product Overview - END -->
 
+                <!-- In-depth Product Description - START -->
                 <h2 class = "section-header">Product Description</h2>
                 <div class = "full-descript">
                     Shelf-stable natural bacterium (B. subtilis and B. lichenformis) are used in conjunction because they 
@@ -92,9 +98,11 @@
                     less solid waste. Throw in the fact that these bacteria are also rich in carotenoids, and there really isn't even 
                     a comparison to the very few other true aquacultural probiotic products available in our industry.
                 </div>
+                <!-- In-depth Product Description - END -->
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
 
     </body>
