--- a/global-footer.html
+++ b/global-footer.html
@@ -1,3 +1,9 @@
+<!-- 
+Content: Global Footer Markup
+Developer: Sergio Pacheco 
+-->
+
+<!-- Contact Us Form - START -->
 <span class = "anchor" id = "contactAnch">&nbsp;</span>
 <div id = "contactSection" class = "container-fluid">
     <section class = "contact aos-init aos-animate" data-aos = "fade-up" data-aos-once = "true" id = "contact">
@@ -32,6 +38,7 @@
         </div>
     </section>
 </div>
+<!-- Contact Us Form - END -->
 
 <!-- Site Footer -->
 <footer>
