--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Willow's Reef Home Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,12 +40,15 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
+            <!-- Welcome Section - START -->
             <div id = "topSection" class = "container-fluid d-flex align-items-center justify-content-center">
                 <div class = "row" data-aos = "fade-up" data-aos-once = "true">
                     <h1>
@@ -59,7 +65,9 @@
                     </a>
                 </div>
             </div>
+            <!-- Welcome Section - END -->
 
+            <!-- Community Image Section - START -->
             <div id = "customerSection" class = "container-fluid">
                 <div class = "row">
                     <div class = "customer-content-1 col-md-6">
@@ -104,7 +112,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Community Image Section - END -->
 
+            <!-- Product List Section - START -->
             <span class = "anchor" id = "productAnch">&nbsp;</span>
             <div id = "productSection" class = "container-fluid">
                 <h2 class = "section-header">Product List</h2>
@@ -172,8 +182,10 @@
                     </a>
                 </div>
             </div>
+            <!-- Product List Section - END -->
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
         
     </body>
