--- a/products-page.html
+++ b/products-page.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Individual Products Page
+Developer: Sergio Pacheco 
+ -->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,12 +40,15 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
+            <!-- Product List Section - START -->
             <div id = "productSection" class = "container-fluid mt-3">
                 <h2 class = "section-header">Available Products</h2>
                 <div class = "row justify-content-center">
@@ -103,7 +109,6 @@
                     </div>
                 </div>
 
-
                 <div class = "row justify-content-center mt-5">
                     <div class = "product-container col-lg d-flex flex-column">
                         <div class = "product-img" id = "frozenFeast">
@@ -132,8 +137,10 @@
                     </div>
                 </div>
             </div>
+            <!-- Product List Section - START -->
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
 
     </body>
