--- a/stores-page.html
+++ b/stores-page.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Stores List Page
+Developer: Sergio Pacheco 
+ -->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,9 +40,11 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Section -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
@@ -64,7 +69,6 @@
                                 </li>
                             </ul> 
                         </span>
-                        <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -81,7 +85,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -100,7 +103,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.aquacave.com/coral-feast-jars.html" target = _blank>AquaCave</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -117,7 +119,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -140,7 +141,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = _blank>IndieFur</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -157,7 +157,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -180,7 +179,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -197,7 +195,6 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
                     </span>
                     <span class = "col-12 col-md-6 col-lg-4 mt-3">
                         <span class = "dropdown btn-group">
@@ -214,12 +211,12 @@
                                 </li>
                             </ul>
                         </span>
-                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
                     </span>
                 </div>
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
 
     </body>
