--- a/community-images.html
+++ b/community-images.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Community Image Gallery Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -39,9 +42,11 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
@@ -60,52 +65,6 @@
                     </div>
 
                     <!-- PhotoSwipe Image Gallery - START -->
-                    <style>
-                        .customer-gallery
-                        {
-                            width: 100%;
-                            height: auto;
-                        }
-                        .customer-gallery figure
-                        {
-                            color: #fff;
-                            width: auto;
-                            background: rgba(0,0,0,.5);
-                            position: relative;
-                            top: -2rem;
-                            padding: 1rem;
-                            max-width: 25rem;
-                            margin: 0 auto;
-                        }
-                        .customer-gallery a
-                        {
-                            height: auto;
-                            line-height: 0;
-                            text-decoration: none;
-                            caret-color: transparent;
-                            cursor: zoom-in;
-                        }
-                        .customer-img-container
-                        {
-                            width: 100%;
-                            max-width: 25rem;
-                            height: 15rem;
-                            background-size: cover;
-                            background-position: center;
-                            background-color: #444;
-                            margin: 0 auto;
-                            box-shadow: 1px 1px 8px -4px #000;
-                        }
-                        .customer-gallery [data-aos^=zoom][data-aos^=zoom].aos-animate:hover
-                        {
-                            transform: scale(1.05);
-                            transition-duration: .3s;
-                        }
-                        .customer-gallery a:hover .customer-img-container
-                        {
-                            opacity: .8;
-                        }
-                    </style>
                     <div id = "customerImgGallery" class = "customer-gallery row">
                         <a href = "images/jpg/customer-images/customer-img-1.jpg" data-size = "768x432" data-med = "images/jpg/customer-images/customer-img-1.jpg" data-med-size = "768x432" data-author = "Customer Name Here" class = "img-main col-md-6 col-lg-4 mt-3" data-aos = "zoom-in" data-aos-once = "true">
                             <div class = "customer-img-container" style = "background-image: url('images/jpg/customer-images/customer-img-1.jpg');">
@@ -167,6 +126,7 @@
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
 
     </body>
