--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Contact Us Message Confirmation Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -41,9 +44,11 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
@@ -75,7 +80,9 @@
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
+        
     </body>
 
     <!-- Custom Site JS -->
