--- a/feeding-vids.html
+++ b/feeding-vids.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Feeding Videos Playlist Page
+Developer: Sergio Pacheco 
+-->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,9 +40,11 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Container -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
@@ -58,16 +63,12 @@
                     for more quality content!
                 </div>
 
+                <!-- YouTube Playlist iFrame -->
                 <iframe id = "videoPlayer" width = "900" height = "506" src = "https://www.youtube.com/embed/0-DltKVsRrA?list=PLBX8Md3S4qloWrm0C82lGXannR7b3WUmc" title = "YouTube video player" frameborder = "0" allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            
-                <!--
-                <div style = "text-align: center; padding: 3rem; background: rgba(0,0,0,.8); color: #fff; width: 900px; margin: 0 auto; margin-top: 2rem; max-width: 100%; text-transform: uppercase;">
-                    Will include a carousel of playlist videos here
-                </div>
-                -->
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
 
     </body>
