--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -1,4 +1,7 @@
-<!-- Sergio Pacheco - Portfolio Site HTML Markup -->
+<!-- 
+Content: Wholesale Products Page
+Developer: Sergio Pacheco 
+ -->
 
 <!DOCTYPE html>
 <html lang = "en">
@@ -37,34 +40,19 @@
             <span class = "sr-only">Back to Top</span>
         </button>
 
+        <!-- Global Header Section populated by JS -->
         <div id = "globalHeader">&nbsp;</div>
 
-        <div id = "pageContent" class = "">
+        <!-- Main Content Section -->
+        <div id = "pageContent">
             <!-- Overlay for Mobile Dropdown -->
             <div id = "screenOverlay">&nbsp;</div>
 
             <div id = "productSection" class = "container-fluid mt-3">
                 <h2 class = "section-header">Wholesale Products</h2>
-                <!--
                 <div class = "row justify-content-center">
-                    <div class = "product-container col-lg d-flex flex-column">
-
-                        <div class = "product-img" id = "coralFeast">
-                            &nbsp;
-                        </div>
-
-                        <div class = "product-info">
-                            <div class = "product-name">
-                                Coral Feast
-                            </div>
-
-                            Coral Feast was formulated to help promote the best color and growth of your corals. 
-                            It is made with 100% natural ingredients with no fillers.
-                        </div>
-
-                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/coral-feast.html">
-                            Learn More
-                        </a>
+                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column invisible" data-aos = "flip-right" data-aos-once = "true">
+                        &nbsp;
                     </div>
                     <div class = "product-container col-lg offset-lg-1 d-flex flex-column">
                         <div class = "product-img" id = "aminoFeast">
@@ -73,9 +61,8 @@
 
                         <div class = "product-info">
                             <div class = "product-name">
-                                AminoFeast+
+                                Wholesale Products
                             </div>
-
                             AminoFeast+ is a blend of 8 amino acids with an all-natural buffer of potassium 
                             which is something that corals utilize. 
                         </div>
@@ -84,57 +71,14 @@
                             Learn More
                         </a>
                     </div>
-                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column">
-                        <div class = "product-img" id = "rhodoFeast">
-                            &nbsp;
-                        </div>
-
-                        <div class = "product-info">
-                            <div class = "product-name">
-                                RhodoFeast
-                            </div>
-
-                            A direct feed Probiotic you can use with any food dry or frozen for coral or fish. 
-                            This is a live probiotic. 
-                        </div>
-                        
-                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/rhodo-feast.html">
-                            Learn More
-                        </a>
-                    </div>
-                </div>
-
-                <div class = "row justify-content-center mt-5">
-                    <div class = "product-container col-lg d-flex flex-column">
-                        <div class = "product-img" id = "frozenFeast">
-                            &nbsp;
-                        </div>
-
-                        <div class = "product-info">
-                            <div class = "product-name">
-                                FrozenFeast
-                            </div>
-
-                            Now taking orders for our all new FrozenFeast. Please ask your LFS to reach out to us or 
-                            send us an email at <a href = "mailto:info@willowsreef.com?subject=Frozenfreast%20Pre%20Order" target = "_blank">info@willowsreef.com</a>.You can always let us know the shops you visit frequently, and we 
-                            can reach out to them directly. 
-                        </div>
-
-                        <a class = "link-button mt-auto" href = "/Willows-Reef-Mock-Up/frozen-feast.html">
-                            Learn More
-                        </a>
-                    </div>
-                    <div class = "product-container col-lg offset-lg-1 d-flex flex-column invisible" data-aos = "flip-right" data-aos-once = "true">
-                        &nbsp;
-                    </div>
                     <div class = "product-container col-lg offset-lg-1 d-flex flex-column invisible" data-aos = "flip-right" data-aos-once = "true">
                         &nbsp;
                     </div>
                 </div>
-                -->
             </div>
         </div>
 
+        <!-- Global Footer Section populated by JS -->
         <div id = "globalFooter">&nbsp;</div>
 
     </body>
