--- a/products-page.html
+++ b/products-page.html
@@ -49,7 +49,7 @@ Developer: Sergio Pacheco
             <div id = "screenOverlay">&nbsp;</div>
 
             <!-- Product List Section - START -->
-            <div id = "productSection" class = "container-fluid">
+            <div id = "productSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Available Products</h2>
                 <div class = "row justify-content-center">
                     <div class = "product-container col-lg-4 col-md-6 d-flex flex-column mt-5">
